compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__inconsistent_try_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 715
expression: try x = Error(1) 1

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ try x = Error(1) 1
  │                  ^

This returned value has a type incompatible with the previous try expression.
The returned value after a try must be of type Result.

Expected type:

    Result(a, Int)

Found type:

    Int


